--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev:server": "json-server src/server.json -p 3333"
+    "dev:server": "json-server src/server.json -p 3333 -d 500"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^0.17.0"
   }
 }
