--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "scheduler": "^0.23.2",
     "styled-components": "^6.1.12",
+    "use-context-selector": "^2.0.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
   },
